# ProjectHydrogen

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yaml
src/: main.c  main.cc
src/platform/: platform.h
src/platform/opengl/: color.h  color_to_vertex_shader.c  compile_shader.c  default_vertex_shader.c  mesh.cc  mesh.h  mesh.hh  mesh_bind.c  mesh_create.c  mesh_delete.c  mesh_draw.c  mesh_unbind.c  shader.cc  shader.h  shader.hh  shader_create.c  shader_delete.c  shader_from_color_shader.c  use.c
